[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/powerup_box_drill_lvl3.png" type="Texture" id=1]
[ext_resource path="res://assets/powerup_box_drill_lvl2.png" type="Texture" id=2]
[ext_resource path="res://script/buy_screen.gd" type="Script" id=3]
[ext_resource path="res://assets/powerup_box_drill_lvl2_disabled.png" type="Texture" id=4]
[ext_resource path="res://assets/powerup_box_drill_lvl3_disabled.png" type="Texture" id=5]

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 288, 289 )
modulate_color = Color( 0.862745, 0.862745, 0.862745, 1 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 288, 289 )
modulate_color = Color( 0.745098, 0.745098, 0.745098, 1 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 288, 289 )

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 288, 289 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 288, 289 )
modulate_color = Color( 0.862745, 0.862745, 0.862745, 1 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 288, 289 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 288, 289 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 288, 289 )

[node name="buy_screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
margin_right = 1080.0
margin_bottom = 1920.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="v_box" type="HBoxContainer" parent="MarginContainer"]
margin_right = 1080.0
margin_bottom = 200.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level_2" type="Button" parent="MarginContainer/v_box"]
margin_left = 338.0
margin_right = 538.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 1 )

[node name="level_3" type="Button" parent="MarginContainer/v_box"]
margin_left = 542.0
margin_right = 742.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 3 )

[connection signal="pressed" from="MarginContainer/v_box/level_2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="MarginContainer/v_box/level_3" to="." method="_on_level_3_pressed"]
